[Ai Assistance] Fix overlap of text and screenshot button
Also, the screenshot button should not be visible when chat blocked by cross origin

Bug: 397376612
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6298369
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Auto-Submit: Samiya Caur <samiyac@chromium.org>

--- a/front_end/panels/ai_assistance/components/chatView.css
+++ b/front_end/panels/ai_assistance/components/chatView.css
@@ -182,6 +182,13 @@
     /* cancel + start new chat button */
     --right-padding: 172px;
   }
+
+  &.screenshot-button {
+    --right-padding:
+    calc(
+      2*var(--sys-size-3) + 2*26px
+    ); /* Gaps because of right paddings + width of two icons */
+  }
 }
 
 .chat-input-buttons {
